--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     
 }
 
@@ -9,13 +9,18 @@ header
     float: left;
     position: fixed;
     height: 10%;
-    margin-left: 40%;
+    margin-right: 40%;
 }
 
 li
 {
     display: inline;
     margin-right: 10px;
+}
+
+li img
+{
+    margin: 20%;
 }
 
 nav
@@ -28,4 +33,5 @@ nav
 article
 {
     margin: 10px auto 10px auto;
+    width: 80%;
 }
