--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -4,10 +4,33 @@ body
     
 }
 
-li
+ul
 {
-    display: inline;
-    margin-right: 10px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: darkblue;
+}
+
+li a
+{
+    display: block;
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a.active
+{
+    background-color: darkblue;
+    color: white;
+}
+
+li a:hover:not(.active)
+{
+    background-color: blue;
+    color: white;
 }
 
 li img
