--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -9,28 +9,56 @@ ul
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 200px;
+    overflow: hidden;
     background-color: darkblue;
 }
 
-li a
+li
 {
-    display: block;
-    color: black;
-    padding: 8px 16px;
+    float: left;
+}
+
+li a, .dropdown
+{
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
-li a.active
-{
-    background-color: darkblue;
-    color: white;
-}
-
-li a:hover:not(.active)
+li a:hover, .dropdown:hover .dropdown
 {
     background-color: blue;
-    color: white;
+}
+
+.dropdown-content
+{
+    display: none;
+    position: absolute;
+    background-color: darkblue;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgb(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a
+{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover 
+{
+    background-color: blue;
+}
+
+.dropdown:hover .dropdown-content
+{
+    display: block;
 }
 
 li img
