--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -44,7 +44,7 @@ li a:hover, .dropdown:hover .dropdown
 
 .dropdown-content a
 {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -68,14 +68,19 @@ li img
     width: 20%;
 }
 
-nav
-{
-    height: 10%;
-    border-radius: 10px;
-}
-
 .inhoud
 {
     margin: 20% auto 10px auto;
     width: 80%;
+}
+
+section
+{
+    background-color: lightgray;
+    margin-top: 4%;
+}
+
+.extraweb
+{
+    background-color: gray;
 }
