--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -4,67 +4,143 @@ body
     
 }
 
-ul
+header
 {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: darkblue;
+    background-color: white;
+    box-shadow: 1px 1px 5px 0px;
+    position: sticky;
+    top: 0px;
+    width: 100%;
 }
 
-li
-{
-    float: left;
-}
-
-li a, .dropdown
+.logo
 {
     display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    color: blue;
+    font-size: 60px;
+    margin-left: 10px;
 }
 
-li a:hover, .dropdown:hover .dropdown
+nav
 {
-    background-color: blue;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: darkblue;
+    overflow: hidden;
 }
 
-.dropdown-content
+.menu a
+{
+display: block;
+padding: 30px;
+color: var(white);
+}
+
+.menu a:hover
+{
+    background-color: gray;
+}
+
+nav
+{
+    max-height: 0;
+    transition: max-heigt .5s ease-out;
+}
+
+.hamb
+{
+    cursor: pointer;
+    float: right;
+    padding: 40px 20px;
+}
+
+.hamb-line
+{
+    background: white;
+    display: block;
+    height: 2px;
+    position: relative;
+    width: 24px;
+}
+
+.hamb-line::before,
+.hamb-line::after
+{
+    background-color: white;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+.hamb-line::before
+{
+    top: 5px;
+}
+.hamb-line::after
+{
+    top: -5px;
+}
+
+.side-menu
 {
     display: none;
-    position: absolute;
-    background-color: darkblue;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgb(0,0,0,0.2);
-    z-index: 1;
 }
 
-.dropdown-content a
+.side-menu:checked ~ nav
 {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+    max-height: 100%;
 }
 
-.dropdown-content a:hover 
+.side-menu:checked ~ .hamb .hamb-line
 {
-    background-color: blue;
+background: transparent;
 }
 
-.dropdown:hover .dropdown-content
+.side-menu:checked ~ .hamb .hamb-line::before
 {
-    display: block;
+    transform: rotate(-45deg);
+    top: 0;
 }
 
-.inhoud
+.side-menu:checked ~ .hamb .hamb-line::after
 {
-    margin: 10% auto 10px auto;
-    width: 80%;
+    transform: rotate(45deg);
+    top: 0;
+}
+
+body:has(.side-menu:checked)
+{
+    overflow: hidden;
+}
+
+@media (min-witdh: 768px)
+{
+    .nav
+    {
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+        background-color: transparent;
+    }
+    .menu li
+    {
+        float: left;
+    }
+    .menu a:hover
+    {
+        background-color: transparent;
+        color: gray;
+    }
+
+    .hamb
+    {
+        display: none;
+    }
 }
 
 section
@@ -76,4 +152,10 @@ section
 .extraweb
 {
     background-color: gray;
+}
+
+img
+{
+    float: right;
+    position: fixed;
 }
