--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -53,6 +53,7 @@ nav
     cursor: pointer;
     float: right;
     padding: 40px 20px;
+    border: 5px thick black ;
 }
 
 .hamb-line
@@ -147,6 +148,14 @@ section
 {
     background-color: lightgray;
     margin-top: 4%;
+    width: 60%;
+}
+
+aside
+{
+    float: right;
+    position: absolute;
+    width: 60%;
 }
 
 .extraweb
