--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -6,7 +6,7 @@ body
 
 header
 {
-    background-color: white;
+    background-color: darkblue;
     box-shadow: 1px 1px 5px 0px;
     position: sticky;
     top: 0px;
@@ -154,7 +154,7 @@ section
 aside
 {
     float: right;
-    position: absolute;
+    position: fixed;
     width: 60%;
 }
 
