--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -1,19 +1,25 @@
 /* Algemene styling */
-body {
-    background-color: rgb(242, 233, 233);
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /* Voorkomt horizontaal scrollen */
     font-family: Arial, sans-serif;
 }
 
 header {
     background-color: darkblue;
     box-shadow: 1px 1px 5px 0px;
-    position: sticky;
+    position: fixed;  /* Zet de header vast bovenaan */
     top: 0;
+    left: 0;
     width: 100%;
+    height: 70px; /* Pas de hoogte aan naar wens */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0 20px;
     z-index: 10;
 }
 
@@ -108,7 +114,7 @@ header {
 
 #menutoggle input:checked~.menu {
     display: block; /* Menu wordt zichtbaar als het hamburger-menu is ingeschakeld */
-    left: 40px;
+    left: 0;
 }
 
 .menu li {
@@ -122,6 +128,7 @@ article {
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
+    margin-top: 80px; /* Zorg ervoor dat er ruimte is voor de header */
 }
 
 section {
@@ -173,3 +180,13 @@ footer {
 
     .hamb-line {
         display: block;
+        background: #cdcdcd;
+        width: 40px;
+        height: 4px;
+        margin: 6px auto;
+    }
+
+    #menutoggle input:checked~.menu {
+        left: 0;
+    }
+}
