--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -8,10 +8,11 @@ body, html {
     font-family: Arial, sans-serif;
 }
 
+/* Header */
 header {
     background-color: darkblue;
     box-shadow: 1px 1px 5px 0px;
-    position: fixed;  /* Zet de header vast bovenaan */
+    position: fixed; /* Zet de header vast bovenaan */
     top: 0;
     left: 0;
     width: 100%;
@@ -53,7 +54,7 @@ header {
 /* Hamburger menu */
 #menutoggle {
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 #menutoggle input {
@@ -69,29 +70,17 @@ header {
     width: 33px;
     height: 4px;
     margin-bottom: 5px;
-    position: relative;
     background: #cdcdcd;
     border-radius: 3px;
-    z-index: 1;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-    transform-origin: 4px 0px;
 }
 
-#menutoggle span:first-child {
-    transform-origin: 0% 0%;
-}
-
-#menutoggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-}
-
-#menutoggle input:checked~span {
-    opacity: 1;
+#menutoggle input:checked ~ span {
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
 }
 
-#menutoggle input:checked~span:nth-last-child(3) {
+#menutoggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(-45deg) scale(0.2, 0.2);
 }
@@ -100,29 +89,29 @@ header {
 .menu {
     display: none; /* Begin met menu verborgen */
     position: absolute;
-    left: -300px;
-    top: 80px;
-    width: 200px;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
+    left: -220px; /* Zorgt ervoor dat het menu echt uit beeld is */
+    top: 70px; /* Menu start net onder de header */
+    width: 220px; /* Breder maken voor leesbaarheid */
+    padding: 20px;
     background: #ededed;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
-    transition: left 0.5s;
+    transition: left 0.5s ease-in-out;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-#menutoggle input:checked~.menu {
-    display: block; /* Menu wordt zichtbaar als het hamburger-menu is ingeschakeld */
-    left: 0;
+#menutoggle input:checked ~ .menu {
+    display: block; 
+    left: 0; /* Menu netjes uitklappen */
 }
 
+/* Stijl voor de menu-items */
 .menu li {
     padding: 10px 0;
-    font-size: 22px;
+    font-size: 18px;
 }
 
-/* Styling voor secties en afbeeldingen */
+/* Content styling */
 article {
     display: flex;
     flex-wrap: wrap;
@@ -149,6 +138,11 @@ aside img {
     width: 100%;
     height: auto;
     display: block;
+}
+
+/* Voorkom dat inhoud tegen het menu aan zit */
+.inhoud {
+    margin-left: 10px;
 }
 
 /* Footer */
@@ -178,15 +172,13 @@ footer {
         width: 100px;
     }
 
-    .hamb-line {
-        display: block;
-        background: #cdcdcd;
-        width: 40px;
-        height: 4px;
-        margin: 6px auto;
+    /* Mobiel menu */
+    .menu {
+        width: 100%; /* Volledige breedte van het scherm */
+        left: -100%; /* Helemaal buiten beeld */
     }
 
-    #menutoggle input:checked~.menu {
+    #menutoggle input:checked ~ .menu {
         left: 0;
     }
 }
