--- a/siteGIT/alweer.css
+++ b/siteGIT/alweer.css
@@ -1,19 +1,27 @@
+
 /* Algemene styling */
-body {
-    background-color: rgb(242, 233, 233);
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /* Voorkomt horizontaal scrollen */
     font-family: Arial, sans-serif;
 }
 
+/* Header */
 header {
     background-color: darkblue;
     box-shadow: 1px 1px 5px 0px;
-    position: sticky;
+    position: fixed; /* Zet de header vast bovenaan */
     top: 0;
+    left: 0;
     width: 100%;
+    height: 70px; /* Pas de hoogte aan naar wens */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0 20px;
     z-index: 10;
 }
 
@@ -47,7 +55,7 @@ header {
 /* Hamburger menu */
 #menutoggle {
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 #menutoggle input {
@@ -63,29 +71,17 @@ header {
     width: 33px;
     height: 4px;
     margin-bottom: 5px;
-    position: relative;
     background: #cdcdcd;
     border-radius: 3px;
-    z-index: 1;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-    transform-origin: 4px 0px;
 }
 
-#menutoggle span:first-child {
-    transform-origin: 0% 0%;
-}
-
-#menutoggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-}
-
-#menutoggle input:checked~span {
-    opacity: 1;
+#menutoggle input:checked ~ span {
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
 }
 
-#menutoggle input:checked~span:nth-last-child(3) {
+#menutoggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(-45deg) scale(0.2, 0.2);
 }
@@ -94,34 +90,35 @@ header {
 .menu {
     display: none; /* Begin met menu verborgen */
     position: absolute;
-    left: -300px;
-    top: 80px;
-    width: 200px;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
+    left: -220px; /* Zorgt ervoor dat het menu echt uit beeld is */
+    top: 70px; /* Menu start net onder de header */
+    width: 220px; /* Breder maken voor leesbaarheid */
+    padding: 20px;
     background: #ededed;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
-    transition: left 0.5s;
+    transition: left 0.5s ease-in-out;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-#menutoggle input:checked~.menu {
-    display: block; /* Menu wordt zichtbaar als het hamburger-menu is ingeschakeld */
-    left: 40px;
+#menutoggle input:checked ~ .menu {
+    display: block; 
+    left: 10; /* Menu netjes uitklappen */
 }
 
+/* Stijl voor de menu-items */
 .menu li {
     padding: 10px 0;
-    font-size: 22px;
+    font-size: 18px;
 }
 
-/* Styling voor secties en afbeeldingen */
+/* Content styling */
 article {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
+    margin-top: 80px; /* Zorg ervoor dat er ruimte is voor de header */
 }
 
 section {
@@ -142,6 +139,11 @@ aside img {
     width: 100%;
     height: auto;
     display: block;
+}
+
+/* Voorkom dat inhoud tegen het menu aan zit */
+.inhoud {
+    margin-left: 10px;
 }
 
 /* Footer */
@@ -171,5 +173,13 @@ footer {
         width: 100px;
     }
 
-    .hamb-line {
-        display: block;
+    /* Mobiel menu */
+    .menu {
+        width: 100%; /* Volledige breedte van het scherm */
+        left: -100%; /* Helemaal buiten beeld */
+    }
+
+    #menutoggle input:checked ~ .menu {
+        left: 0;
+    }
+}
